fixed issue where when shrinking site horizontially, .missionstatement and .portfoliostatment overlap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,13 +35,11 @@
     background-color: white;
     color: black;
     font-size: 2rem;
-    line-height: 7%;
 }
 
 .portfolioStatement {
     text-align: center;
     margin-top: 5rem;
     font-size: 2rem;
-    line-height: 7%;
 }
 
